--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <div class="player">
             <video id="video" width="400" muted poster="./assets/images/poster.jpg"
-                src="./assets/videos/lofi.mp4"></video>
+                src="https://media.w3.org/2010/05/sintel/trailer.mp4"></video>
             <div class="player-overlay">
                 <h2 class="player-title">Musica para programar</h2>
                 <div class="player-actions">
